--- a/core/notebooks/notebook08_webdata-II.qmd
+++ b/core/notebooks/notebook08_webdata-II.qmd
@@ -17,6 +17,8 @@ The data is a `parquet` file which contains a dataframe with 8 columns:
 - `zipcode`: postal zipcode of the user
 - `device`: type of device used by the user
 
+::: #q1
+
 ## Q1. Some statistics / computations
 
 Using `pyspark.sql` we want to do the following things:
@@ -26,14 +28,27 @@ Using `pyspark.sql` we want to do the following things:
 3. Construct a column containing the number of days since the last action of the user
 4. Construct a column containing the number of actions of each user for each modality of device 
 
-## Q2. Binary classification
+:::
+
+::: #q2
+
+## Q2. Feature engineering 
 
 Then, we want to construct a classifier to predict the click on the category 1204. 
 Here is an agenda for this:
 
 1. Construction of a features matrix for which each line corresponds to the information concerning a user.
 2. In this matrix, we need to keep only the users that have been exposed to the display in category 1204
+
+:::
+
+::: #q3
+
+## Q3. Classification 
+
 3. Using this training dataset, train a binary classifier, and evaluate your classifier using a precision / recall curve computed on test data.
+
+:::
 
 
 # Download/read the data and a first look at the data
@@ -84,6 +99,7 @@ input_file = os.path.join(input_path, 'webdata.parquet')
 df = spark.read.parquet(input_file)
 ```
 
+:::
 
 ::: {.callout-note}
 
@@ -102,6 +118,9 @@ dfa = pq.read_table(input_file)
 ```{python}
 dfa.num_columns
 ```
+
+:::
+
 
 ::: {.callout-warning}
 
@@ -152,6 +171,7 @@ from pyspark.sql.functions import col, lit
       .count()
 )
 ```
+
 
 ```{python}
 def foo(x): yield len(set(x))
