--- a/weeks/week-10.qmd
+++ b/weeks/week-10.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 9"
+title: "Week 10"
 subtitle: "A deeper dive into Spark"
 editor: source
 draft: false
@@ -10,14 +10,15 @@ engine: jupyter
 ::: {.callout-important}
 
 
--   Friday 21 March 2025 Sophie Germain 1005 **13h30-15h30**
+-   Friday 28 March Sophie Germain 1005 **13h30-15h30**
 -   {{< fa cal >}} [Calendar](https://edt.math.univ-paris-diderot.fr/#/parcours/mathinfo/m1)
 
 :::
 
 ## Lecture : slides
 
-- {{< fa display >}} [Deeper dive](/core/slides/slides07-spark_deeper-dive.html){target="_blank"}
+- {{< fa display >}} [Spark tips](/core/slides/slides08_spark-tips.html){target="_blank"}
+- {{< fa display >}} [Deeper dive](/core/slides/slides07-spark-deeper-dive.html){target="_blank"}
 
 
 We may come back to several parts of 
@@ -30,7 +31,7 @@ We may come back to several parts of
 - {{< fa display >}} [File formats](/core/slides/slides06_file-formats.html){target="_blank"}
 
 
-## [Notebooks](/notebooks-listings.qmd)
+## Notebooks
 
 If time allows, we shall go back to 
 
